# LTScore

./: README.md  TODO.md  pyproject.toml
.github/workflows/: publish.yml
src/ltscore/: __init__.py  main.py
src/ltscore/assets/: text-sample-br.txt
tests/: test_cli.py
