[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ltscore"
version = "0.2.0"
description = "A multilingual grammaticality util based on LanguageTool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
]
license = {text = "MIT"}
authors = [
    {name = "Alan Kersaudy", email = "alan.kersaudy@proton.me"}
]
[project.urls]
Homepage = "https://github.com/Cymru-Breizh/LTScore"
[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov", # For coverage reports
]

[project.scripts]
ltscore = "ltscore.main:run_cli"

[tool.setuptools.package-data]
"ltscore" = ["bin/*"]